# ModooRPG

./: .gitignore  README.md
client/: pubspec.yaml
client/web/: index.html
proto/gateway/: gateway.proto
rust/game_server/: Cargo.toml
server/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
server/kotlin/gradle/: libs.versions.toml
server/kotlin/support/common/: build.gradle.kts
server/kotlin/support/common/src/main/kotlin/extension/: UuidUtil.kt
server/kotlin/user/: README.md
server/kotlin/user/application/: build.gradle.kts
server/kotlin/user/application/src/main/kotlin/com/waterfogsw/modoorpg/user/application/account/service/: AccountService.kt
server/kotlin/user/application/src/main/kotlin/com/waterfogsw/modoorpg/user/application/common/config/: ApplicationConfig.kt
server/kotlin/user/bootstrap/api/: build.gradle.kts
server/kotlin/user/bootstrap/api/src/main/kotlin/com/waterfogsw/modoorpg/user/bootstrap/: UserApplication.kt
server/kotlin/user/bootstrap/api/src/main/resources/: application.yaml  compose-local.yaml
server/kotlin/user/domain/src/main/kotlin/com/waterfogsw/modoorpg/user/domain/entity/: Account.kt  Email.kt  HashedPassword.kt  Password.kt  Username.kt
server/kotlin/user/domain/src/test/kotlin/com/waterfogsw/modoorpg/user/domain/entity/: EmailTest.kt
server/kotlin/user/infrastructure/jpa/: build.gradle.kts
server/rust/api_gateway/: Cargo.toml  README.md  build.rs  config.yaml
server/rust/api_gateway/src/: config.rs  main.rs
server/rust/game_server/: Cargo.toml
(+15 files in other folders)
