[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.0", features = ["full"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
futures = "0.3"
warp = "0.3"
bytes = "1.0"

[build-dependencies]
tonic-build = "0.11.0"
